--- a/text-classification.html
+++ b/text-classification.html
@@ -13971,9 +13971,10 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Spam-Message-Classifier">Spam Message Classifier<a class="anchor-link" href="#Spam-Message-Classifier">&#182;</a></h1><h3 id="built-with-NLTK-and-Scikit-learn-(acheiving-99%25-accuracy)">built with NLTK and Scikit-learn (acheiving 99% accuracy)<a class="anchor-link" href="#built-with-NLTK-and-Scikit-learn-(acheiving-99%25-accuracy)">&#182;</a></h3><h2 id="Project-Overview">Project Overview<a class="anchor-link" href="#Project-Overview">&#182;</a></h2><details>
+<h1 id="Spam-Message-Classifier">Spam Message Classifier<a class="anchor-link" href="#Spam-Message-Classifier">&#182;</a></h1><h3 id="built-with-NLTK-and-Scikit-learn-(acheiving-99%25-accuracy)">built with NLTK and Scikit-learn (acheiving 99% accuracy)<a class="anchor-link" href="#built-with-NLTK-and-Scikit-learn-(acheiving-99%25-accuracy)">&#182;</a></h3><h2 id="Data-Source-Overview">Data Source Overview<a class="anchor-link" href="#Data-Source-Overview">&#182;</a></h2><p>The data set is from the <a href="https://archive.ics.uci.edu/ml/datasets/sms+spam+collection">UCI ML Repository</a>. It contains 5000 SMS labeled messages that have been collected for mobile phone spam research.</p>
+<h2 id="Project-Overview">Project Overview<a class="anchor-link" href="#Project-Overview">&#182;</a></h2><details>
     <summary>1. Load the Dataset</summary>
-    <p>The data set is from the [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/sms+spam+collection). It contains 5000 SMS labeled messages that have been collected for mobile phone spam research. Use the pandas dataframe to ensure value are properly loaded</p>
+    <p>Use the pandas dataframe to ensure value are properly loaded</p>
 </details><details>
     <summary>2. Data Preprocessing</summary>
     <p>Convert the class labels (span/ham) to binray values uesing sklearn LabelEncoder. Replace email address, url, phonenumbers with generic representation. Then remove stop words and keepwing word stems</p>
